# TheSamosasBattlecode2018

./: .gitignore  CMakeLists.txt  Makefile  README.md  format.sh  run.sh
agents/: earth.cpp  mars.cpp
include/: .bc.hpp.swp  GameState.hpp  MapInfo.hpp  PairwiseDistances.hpp  Strategy.hpp  TargetSearch.hpp  UnitList.hpp  bc.hpp  constants.hpp  distances.hpp  silly_pathfinding.hpp
include/potential_fields/: potential_fields.hpp
lib/: GameState.cpp  MapInfo.cpp  PairwiseDistances.cpp  UnitList.cpp  distances.cpp
src/: .main.cpp.swp  MapInfo.cpp  main.cpp
tests/: distances.cpp  distancestest.py  testfile
